tests/ui/delegation/method-call-choice.stderr
error[E0308]: mismatched types
  --> $DIR/method-call-choice.rs:20:27
   |
LL |     reuse to_reuse::foo { self.0 }
   |                     ---   ^^^^^^ expected `&F`, found `F`
   |                     |
   |                     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/method-call-choice.rs:14:12
   |
LL |     pub fn foo(_: &F) {}
   |            ^^^ -----
help: consider borrowing here
   |
LL |     reuse to_reuse::foo { &self.0 }
   |                           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
